--- a/paper.tex
+++ b/paper.tex
@@ -117,7 +117,7 @@ To allow for the exploration of the relative effects of model parameters and spa
 In order to test for the influence of spatial initial conditions on model outputs, we use a systematic method to compare phase diagrams. We define a phase diagram as a vector of  outputs\comment[FL]{Juste, peut-être des choses qui sont mal dites? : par exemple, dans diagramme de phase est-ce qu'on entend pas une "réification" de catégories - des clusters par ex? Et du coup est-ce que cela ne manque pas là?}. 
 
 Comparing phase diagrams is useful because it allows us to compare the 
-Indeed, we have as many phase diagrams than we have spatial grids, what makes a qualitative visual comparison not realistic\comment[FL]{donner un ordre de grandeur du nombre de simulations?}. A solution is to use systematic quantitative procedures. To our knowledge there exist no well established method to compare phase diagrams in agent-based modeling and geosimulation literature. We used a distance between two phase diagram corresponding to the share of between-diagrams variability relative to their internal variability\comment[FL]{je ne comprends pas ce choix : pourquoi faut il considérer que des classes ayant une forte cohérence interne seraient plus éloignées? ou alors la question ne se pose pas en ces termes... Par ailleurs est ce que la formule est bien homogène du point de vue des dimensions? En tous cas je pense qu'on peut se passer de la formule à ce stade, éventuellement à mettre dans l'affichage des résultats si on en a besoin.}[(JR)]
+Indeed, we have as many phase diagrams than we have spatial grids, what makes a qualitative visual comparison not realistic\comment[FL]{donner un ordre de grandeur du nombre de simulations?}. A solution is to use systematic quantitative procedures. To our knowledge there exist no well established method to compare phase diagrams in agent-based modeling and geosimulation literature. We used a distance between two phase diagram corresponding to the share of between-diagrams variability relative to their internal variability\comment[FL]{je ne comprends pas ce choix : pourquoi faut il considérer que des classes ayant une forte cohérence interne seraient plus éloignées? ou alors la question ne se pose pas en ces termes... Par ailleurs est ce que la formule est bien homogène du point de vue des dimensions? En tous cas je pense qu'on peut se passer de la formule à ce stade, éventuellement à mettre dans l'affichage des résultats si on en a besoin.}[(JR) pour l'homogénéité oui justement on prend $d^2$ car c'est les variances, on obtient une mesure sans unité ; ok pour omettre la formule ; pour l'interprétation, on regarde la distance relative, pour des classes à une certaine distance, si elles sont concentrées, cette distance sera plus sigificative que si elles ont une grande variabilité et peuvent se recouper ; par exemple si elles ont mêmes variance $\sigma^2$, alors si $d \simeq \sqrt{2} \sigma$ alors les nuages de points vont en gros se recouper sur leur moitié (cas gaussien idéal), tandis que si $d\gg \sigma$, le max d'un diagramme sera très loin du min de l'autre - on compare à la fois la distance relative et la distance de forme.]
 
 %Several potential methods from other fields such as environmental science could be used, but we keep it simple and such methodological considerations are furthermore auxiliary to the main purpose of this paper. We propose therefore an intuitive measure corresponding to the share of between-diagrams variability relative to their internal variability. More formally, the distance is given by
 
@@ -127,14 +127,13 @@ Indeed, we have as many phase diagrams than we have spatial grids, what makes a 
 
 %where $f_{\vec{\alpha}}(\vec{x})$ is the phase diagrams on parameters $\vec{x}$ at given meta-parameters $\vec{\alpha}$. $d$ is a functional distance that we take simply as Euclidian distance. The variances are estimated within each phase diagram $f_{\vec{\alpha_i}}$.
 
-\comment[JR]{j'ai simplifié au max}\comment[mLT]{Attention, on utilise alpha plus haut.}
 
 The last methodological point which we need to emphasis is the relation between the workflow we introduce and model exploration workflows. The ideas of multi-modeling and extensive model exploration are nothing from new as ~\cite{openshaw1983data} already advocated for ``model-crunching'', but their effective use only begins to emerge thanks to the apparition of new methods and tools together with an explosion of computation capabilities. The model exploration platform OpenMole~\citep{reuillon2013openmole} allows to embed any model as a blackbox, write modulable exploration workflow using advanced methodologies such as genetic algorithms and distribute transparently the computation on large scale computation infrastructures such as clusters or computation grids. In our case, the workflow tool is a powerful way to embed both the sensitivity analysis and the meta-sensitivity analysis, and allow to couple any generator with any model in a straightforward way as soon as the model can take its spatial configuration as input or from an input file. In this paper, we use the OpenMole platform for spatial environment and model coupling, placing ourselves in the renewed framework of multi-modelling claimed by \citet{cottineau2015modular}.
 %%%%%%%%%%%%%%%%%%%%%%
 \subsection{Constructing a spatial generator of density grids}
 
-Our spatial generator applies an urban morphogenesis model (\cite{Batty2007}), which has been generalised, explored and calibrated (\cite{Raimbault2014}). In a nutshell, grids are generated through an iterative process which, starting from a void grid, adds a quantity $N$ (population) at each time step $t$, allocating it through preferential attachment \comment[FL]{à quoi?} characterised by its strength of attraction $\alpha$. More precisely, each added unit has a probability equal to $P_i^{\alpha}/\sum_k P_k^{\alpha}$ to be added to patch $i$ with population $P_i$, all $N$ units being added independently and in parallel. At the end of each time step, this growth process is smoothed $n$ times using a diffusion process of strength $\beta$: each patch transmits an equal share of $\beta\cdot P_i$ to its extended neighborhood (8 surrounding patches). To avoid border effects such as a reflexion on the border of the world, border patches diffuse to the outside. The procedure stops when a fixed number of steps $k$ is reached. The grid then has a population of $k \times N$ (the population lost due to diffusion process to the outside is reallowed through a normalization procedure at the end of the steps). Grids are thus generated from the combination of the values of these four meta-parameters $\alpha$, $\beta$, $n$ and $N$, in addition to the random seed. To ease our exploration, only the distribution of density is allowed to vary rather than the size of the grid, which we fix to a 50x50 square environment of 100,000 units (cf. figure \ref{fig:spatialGen}). Typical value ranges for the other parameters are $\alpha\in\left[0.5,4.0\right]$, $\beta \in\left[0,0.3\right] $, $N\in \left[100,10000\right]$, $n\in\left[1,4\right]$.
-\comment{A detailler en incluant les equations de morphogenese}[(JR) j'ai détaillé le processus, c'est suffisant ?]\comment[MLT]{Il me semble que l'on pourrait mieux expliciter la relation N/n (et peut-être du coup inverser N et n). Plus il me semble que l'on devrait dire plus clairement à quoi se réfère alpha : à une cellule $i$? au pas de temps $t$? Pourquoi ne pas indexer alpha? Enfin, je crois que l'on gagnerait encore plus en clarté si on expliquait formellement comment tous les paramètres sont reliés entre eux, notamment pour expliquer l'arrêt de la procédure d'attribution d'une nouvelle pop à la grille.} \comment[FL]{je crois que N c'est l'incrément de pop et n le nombre de fois où c'est smoothé mais c'est quoi la pop totale?}
+Our spatial generator applies an urban morphogenesis model (\cite{Batty2007}), which has been generalised, explored and calibrated (\cite{Raimbault2014}). In a nutshell, grids are generated through an iterative process which, starting from a void grid, adds a quantity $N$ (population) at each time step $t$, allocating it through preferential attachment on population density, characterised by its strength of attraction $\alpha$. More precisely, each added unit has a probability equal to $P_i^{\alpha}/\sum_k P_k^{\alpha}$ to be added to patch $i$ with population $P_i$, all $N$ units being added independently and in parallel. At the end of each time step, this growth process is smoothed $n$ times using a diffusion process of strength $\beta$: each patch transmits an equal share of $\beta\cdot P_i$ to its extended neighborhood (8 surrounding patches). To avoid border effects such as a reflexion on the border of the world, border patches diffuse to the outside. The procedure stops when a fixed number of steps $k$ is reached. The grid then has a population of $k \times N$ (the population lost due to diffusion process to the outside is reallowed through a normalization procedure at the end of the steps). Grids are thus generated from the combination of the values of these four meta-parameters $\alpha$, $\beta$, $n$ and $N$, in addition to the random seed. To ease our exploration, only the distribution of density is allowed to vary rather than the size of the grid, which we fix to a 50x50 square environment of 100,000 units (cf. figure \ref{fig:spatialGen}). Typical value ranges for the other parameters are $\alpha\in\left[0.5,4.0\right]$, $\beta \in\left[0,0.3\right] $, $N\in \left[100,10000\right]$, $n\in\left[1,4\right]$.
+\comment[MLT]{Il me semble que l'on pourrait mieux expliciter la relation N/n (et peut-être du coup inverser N et n). Plus il me semble que l'on devrait dire plus clairement à quoi se réfère alpha : à une cellule $i$? au pas de temps $t$? Pourquoi ne pas indexer alpha? Enfin, je crois que l'on gagnerait encore plus en clarté si on expliquait formellement comment tous les paramètres sont reliés entre eux, notamment pour expliquer l'arrêt de la procédure d'attribution d'une nouvelle pop à la grille.} \comment[FL]{je crois que N c'est l'incrément de pop et n le nombre de fois où c'est smoothé mais c'est quoi la pop totale?}
 
 
 
