Update on Overleaf.

--- a/spacematters.bib
+++ b/spacematters.bib
@@ -508,6 +508,15 @@ eprint = {
   publisher={Multidisciplinary Digital Publishing Institute}
 }
 
+@article{alizadeh2016generating,
+  title={Generating and analyzing spatial social networks},
+  author={Alizadeh, Meysam and Cioffi-Revilla, Claudio and Crooks, Andrew},
+  journal={Computational and Mathematical Organization Theory},
+  pages={1--29},
+  year={2016},
+  publisher={Springer}
+}
+
 @article{jargowsky2002sprawl,
   title={Sprawl, concentration of poverty, and urban inequality},
   author={Jargowsky, Paul A},
