--- a/paper.tex
+++ b/paper.tex
@@ -132,7 +132,7 @@ The last methodological point which we need to emphasis is the relation between 
 %%%%%%%%%%%%%%%%%%%%%%
 \subsection{Constructing a spatial generator of density grids}
 
-Our spatial generator applies an urban morphogenesis model (\cite{Batty2007}), which has been generalised, explored and calibrated (\cite{Raimbault2014}). In a nutshell, grids are generated through an iterative process which, starting from a void grid, adds a quantity $N$ (population) at each time step $t$, allocating it through preferential attachment on population density, characterised by its strength of attraction $\alpha$. More precisely, each added unit has a probability equal to $P_i^{\alpha}/\sum_k P_k^{\alpha}$ to be added to patch $i$ with population $P_i$, all $N$ units being added independently and in parallel. At the end of each time step, this growth process is smoothed $n$ times using a diffusion process of strength $\beta$: each patch transmits an equal share of $\beta\cdot P_i$ to its extended neighborhood (8 surrounding patches). To avoid border effects such as a reflexion on the border of the world, border patches diffuse to the outside. The procedure stops when a fixed number of steps $k$ is reached. The grid then has a population of $k \times N$ (the population lost due to diffusion process to the outside is reallowed through a normalization procedure at the end of the steps). Grids are thus generated from the combination of the values of these four meta-parameters $\alpha$, $\beta$, $n$ and $N$, in addition to the random seed. To ease our exploration, only the distribution of density is allowed to vary rather than the size of the grid, which we fix to a 50x50 square environment of 100,000 units (cf. figure \ref{fig:spatialGen}). Typical value ranges for the other parameters are $\alpha\in\left[0.5,4.0\right]$, $\beta \in\left[0,0.3\right] $, $N\in \left[100,10000\right]$, $n\in\left[1,4\right]$.
+Our spatial generator applies an urban morphogenesis model (\cite{Batty2007}), which has been generalised, explored and calibrated (\cite{2017arXiv170806743R}). In a nutshell, grids are generated through an iterative process which, starting from a void grid, adds a quantity $N$ (population) at each time step $t$, allocating it through preferential attachment on population density, characterised by its strength of attraction $\alpha$. More precisely, each added unit has a probability equal to $P_i^{\alpha}/\sum_k P_k^{\alpha}$ to be added to patch $i$ with population $P_i$, all $N$ units being added independently and in parallel. At the end of each time step, this growth process is smoothed $n$ times using a diffusion process of strength $\beta$: each patch transmits an equal share of $\beta\cdot P_i$ to its extended neighborhood (8 surrounding patches). To avoid border effects such as a reflexion on the border of the world, border patches diffuse to the outside. The procedure stops when a fixed number of steps $k$ is reached. The grid then has a population of $k \times N$ (the population lost due to diffusion process to the outside is reallowed through a normalization procedure at the end of the steps). Grids are thus generated from the combination of the values of these four meta-parameters $\alpha$, $\beta$, $n$ and $N$, in addition to the random seed. To ease our exploration, only the distribution of density is allowed to vary rather than the size of the grid, which we fix to a 50x50 square environment of 100,000 units (cf. figure \ref{fig:spatialGen}). Typical value ranges for the other parameters are $\alpha\in\left[0.5,4.0\right]$, $\beta \in\left[0,0.3\right] $, $N\in \left[100,10000\right]$, $n\in\left[1,4\right]$.
 \comment[MLT]{Il me semble que l'on pourrait mieux expliciter la relation N/n (et peut-être du coup inverser N et n). Plus il me semble que l'on devrait dire plus clairement à quoi se réfère alpha : à une cellule $i$? au pas de temps $t$? Pourquoi ne pas indexer alpha? Enfin, je crois que l'on gagnerait encore plus en clarté si on expliquait formellement comment tous les paramètres sont reliés entre eux, notamment pour expliquer l'arrêt de la procédure d'attribution d'une nouvelle pop à la grille.} \comment[FL]{je crois que N c'est l'incrément de pop et n le nombre de fois où c'est smoothé mais c'est quoi la pop totale?}
 
 
