--- a/spacematters.bib
+++ b/spacematters.bib
@@ -1,3 +1,19 @@
+
+
+@ARTICLE{2017arXiv170806743R,
+   author = {{Raimbault}, J.},
+    title = {Calibration of a Density-based Model of Urban Morphogenesis},
+  journal = {ArXiv e-prints},
+   eprint = {1708.06743},
+ keywords = {Physics - Physics and Society, Computer Science - Multiagent Systems},
+     year = {2017},
+    month = {jul},
+   adsurl = {http://adsabs.harvard.edu/abs/2017arXiv170806743R},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @article{AllenSanglier1979,
 	title = {A dynamic model of growth in a central place system},
 	volume = {11},
