--- a/paper.tex
+++ b/paper.tex
@@ -194,7 +194,6 @@ Within a standard Schelling model (i.e. initialised with a uniform density grid)
 
 \paragraph{Sugarscape} We measure the distance of all 3-dimensional phase diagrams to the reference phase diagram computed on the default model setup \comment[CC]{j'ai peut-etre manque une etape, mais c'est quoi le default model setup? en termes de grille d'entree: uniforme? random? ou Netlogo?}[(JR) c'est Netlogo, une configuration bi-centrique particulière] (see Fig.~\ref{fig:sugarscape-distance-meta} for its morphological positioning regarded generated grids), using equation~\ref{eq:phase-distance} with the L2 distance to ensure direct interpretability. \comment[CC]{il manque les equations} Indeed, it gives in that case the average squared distance between corresponding points of the phase diagrams, relative to the average of the variance of each. Therefore, values greater than 1 will mean that inter-diagram variability is more important than intra-diagram variability.
 
-\comment[CC]{en mode tatillon, on voudrait une double descente chromatique centree sur 1 pour la legende de la distance figure 4, qui distinguerait mieux les situations superieures a 1 et celle inf a 1 (ce qui nous interesse). Par exemple, blanc pour 1, et de ++ rose quand c'est >>1 et de ++ vert que c'est <<1.}[(JR) oui tu as carrément raison, j'ai updaté les figures !]\comment[CC]{magnifique! bien joué}
 
 % summary stats
 %   Min. 1st Qu.  Median    Mean 3rd Qu.    Max. 
@@ -206,9 +205,9 @@ We obtain a very strong sensitivity to initial spatial conditions. Indeed, the r
 %%%%%%%%%%%%%
 \begin{figure}
 \centering
-\includegraphics[width=0.5\textwidth]{figures/relativedistance_metaparams}\\
-\includegraphics[width=0.4\textwidth]{figures/alpha_beta_schemas}\\
-\caption{\textbf{Relative distances of phase diagrams by initial spatial grids described by the meta-parameters of their generator.} (Top) Relative distance as a function of meta-parameters $\alpha$ (strength of preferential attachment) and $\beta$ (strength of diffusion process). (Bottom) Corresponding stylised density grids }
+\includegraphics[width=0.8\textwidth]{figures/relativedistance_metaparams}\\
+%\includegraphics[width=0.4\textwidth]{figures/alpha_beta_schemas}(Bottom) Corresponding stylised density grids\\
+\caption{\textbf{Relative distances of phase diagrams by initial spatial grids described by the meta-parameters of their generator.} Relative distance as a function of meta-parameters $\alpha$ (strength of preferential attachment) and $\beta$ (strength of diffusion process). \comment[JR]{je sais pas si c'est une bonne idee de mettre les grilles stylisees comme ca parce que ca donne une fausse idee des sorties du modele de generation}}
 \label{fig:sugarscape-distance-meta}
 \end{figure}
 %%%%%%%%%%%%%
@@ -277,10 +276,10 @@ Simulation outcome by segregation index: & \multicolumn{2}{c|}{\textbf{Dissimila
 \end{table*}
 
 
-\comment[cc]{Resultats Temporaires sur 1/3 des simu}
+
 \begin{table*}[]
 \centering
-\caption{My caption}
+\caption{\comment[cc]{Resultats Temporaires sur 1/3 des simu}}
 \begin{adjustwidth}{-0.5cm}{-0.5cm}
 \begin{tabular}{|m{2.5cm}|ll|ll|ll|}
 \hline
@@ -305,10 +304,10 @@ N.B. Moran's I applies to the minority population
 
 
 
-\comment[cc]{Nouveaux Resultats}
+
 \begin{table*}[]
 \centering
-\caption{My caption}
+\caption{\comment[CC]{Nouveaux Resultats}}
 \begin{adjustwidth}{-0.5cm}{-0.5cm}
 \begin{tabular}{|m{2.5cm}|ll|ll|ll|}
 \hline
@@ -353,9 +352,10 @@ Although the applications we present here are limited by the simplicity of the m
 We want foster this extension of our work by releasing the density grids also generated, as well as the generating work-flow \comment[CC]{add link to github repo}. Another way to go would be to implement additional generators, such as social networks \citep{alizadeh2016generating} with localised agents. 
 
 
-\paragraph{An emancipation opportunity for social sciences.
+\paragraph{An emancipation opportunity for social sciences.}
+
 \comment[MLT]{Au-delà de l'outil NetLogo, parler de la formalisation de l'espace par les physiciens qui a influencé les modèles en géographie (cf: commentaire de Florent que je propose de bouger ici)?}
-\comment[FLN]{opportunity for social science to emancipate from the very strong hypotheses of physicists that have become standards (homogeneity and isotropy of space), even though they are never valid in social systems.} }
+\comment[FLN]{opportunity for social science to emancipate from the very strong hypotheses of physicists that have become standards (homogeneity and isotropy of space), even though they are never valid in social systems.} 
 
 
 
